--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --config webpack.prod.js",
     "test": "jest",
     "coverage": "jest --coverage",
+    "e2e": "jest --testPathPattern=./e2e/ --runInBand",
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
     "preshow:dist": "npm run build",
@@ -31,6 +32,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.3",
     "mini-css-extract-plugin": "^2.7.2",
+    "puppeteer": "^19.7.4",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
