--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "puppeteer": "^19.7.4",
     "terser-webpack-plugin": "^5.3.6",
